--- a/Ecommerce/Views/Cliente/Cadastrar.cshtml
+++ b/Ecommerce/Views/Cliente/Cadastrar.cshtml
@@ -3,17 +3,19 @@
 @using (Html.BeginForm(null, null, FormMethod.Post, new { @id = "frm" }))
 {
     @Html.AntiForgeryToken()
-
-    <p class="erro"> @ViewBag.mensagem </p>
-
+  
     <div class="form-horizontal">
         <h4>Cadastre um novo cliente</h4>
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })        
+        <div class="form-group">            
+            <div class='alert alert-danger @ViewBag.hideerro' role='alert'>@ViewBag.mensagem</div>  
+        </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.cpf, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.cpf, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.cpf, new { htmlAttributes = new { @class = "form-control form-control-cpf" } })
                 @Html.ValidationMessageFor(model => model.cpf, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -43,59 +45,39 @@
         </div>
 
 
+        <div id="div_telefone_0" class="form-group telefone">
+            @Html.LabelFor(model => model.telefones, htmlAttributes: new { @class = "control-label col-md-2"})                
+            <div class="col-md-2">
+                @Html.EditorFor(model => model.telefones[0].numero, new { htmlAttributes = new { id = "telefone_0", @class = "form-control form-control-telefone" } })
+                @Html.ValidationMessageFor(model => model.telefones[0].numero, "", new { @class = "text-danger" })
+            </div>                
+        </div>
 
-
-
-        <div id="bloco-telefone" class="form-group">
-
-
-            <div id="div_telefone_0" class="col-md-11">
-                @Html.LabelFor(model => model.telefones, htmlAttributes: new { @class = "control-label col-md-2"})
-                <div class="col-md-1">
-                    @Html.EditorFor(model => model.telefones[0].ddd, new { htmlAttributes = new { InputType="text", id = "ddd_0", @class = "ddd form-control" } })
-                    @Html.ValidationMessageFor(model => model.telefones[0].ddd, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-md-2">
-                    @Html.EditorFor(model => model.telefones[0].numero, new { htmlAttributes = new { id = "numero_0", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.telefones[0].numero, "", new { @class = "text-danger" })
-                </div>                
+        <div id="div_telefone_1" class="form-group telefone telefone-adicional hide">
+            <div class="col-md-2"></div>                
+            <div class="col-md-2">
+                @Html.EditorFor(model => model.telefones[1].numero, new { htmlAttributes = new { id = "telefone_1", @class = "form-control form-control-telefone" } })
+                @Html.ValidationMessageFor(model => model.telefones[1].numero, "", new { @class = "text-danger" })
             </div>
-
-            <div id="div_telefone_1" class="col-md-11 telefone-adicional hide">
-                <div class="col-md-2"></div>
-                <div class="col-md-1">
-                    @Html.EditorFor(model => model.telefones[1].ddd, new { htmlAttributes = new { id = "ddd_1", @class = "ddd form-control" } })
-                    @Html.ValidationMessageFor(model => model.telefones[1].ddd, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-md-2">
-                    @Html.EditorFor(model => model.telefones[1].numero, new { htmlAttributes = new { id = "numero_1", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.telefones[1].numero, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-md-1">
-                    <a id="excluir_1" class="excluir-telefone telefone">excluir</a>
-                </div>
+            <div class="col-md-1 exc">
+                <a id="excluir_1" class="excluir-telefone telefone">excluir</a>
             </div>
+        </div>
 
-            <div id="div_telefone_2" class="col-md-11 telefone-adicional hide">
-                <div class="col-md-2"></div>
-                <div class="col-md-1">
-                    @Html.EditorFor(model => model.telefones[2].ddd, new { htmlAttributes = new { id = "ddd_2", @class = "ddd form-control" } })
-                    @Html.ValidationMessageFor(model => model.telefones[2].ddd, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-md-2">
-                    @Html.EditorFor(model => model.telefones[2].numero, new { htmlAttributes = new { id = "telefone_2", @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.telefones[2].numero, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-md-1">
-                    <a id="excluir_2" class="excluir-telefone telefone">excluir</a>
-                </div>
+        <div id="div_telefone_2" class="form-group telefone telefone-adicional hide">
+            <div class="col-md-2"></div>                
+            <div class="col-md-2">
+                @Html.EditorFor(model => model.telefones[2].numero, new { htmlAttributes = new { id = "telefone_2", @class = "form-control form-control-telefone" } })
+                @Html.ValidationMessageFor(model => model.telefones[2].numero, "", new { @class = "text-danger" })
             </div>
-
-            <div class="col-md-11">
-                <div class="col-md-2"></div>                                
-                <a id="adicionar-telefone" class="telefone col-md-2">adicionar</a>
+            <div class="col-md-1 exc">
+                <a id="excluir_2" class="excluir-telefone telefone">excluir</a>
             </div>
+        </div>
 
+        <div class="form-group">
+            <div class="col-md-2"></div>                                
+            <a id="adicionar-telefone" class="telefone-adicionar col-md-2">adicionar mais telefone</a>
         </div>
 
 
