--- a/Ecommerce/Views/Cliente/Deletar.cshtml
+++ b/Ecommerce/Views/Cliente/Deletar.cshtml
@@ -7,6 +7,9 @@
 <div>
     <h4>Excluir cadastro do cliente</h4>
     <hr />
+    <div class="form-group">
+        <div class='alert alert-danger @ViewBag.hideerro' role='alert'>@ViewBag.mensagem</div>
+    </div>
     <dl class="dl-horizontal">
         <dt>
             
@@ -52,11 +55,8 @@
             @Html.DisplayNameFor(model => model.telefones)
         </dt>
 
-        @if(Model.telefones[0].ddd != null && Model.telefones[0].numero != null) {
-            <dd>
-                @Html.DisplayName("(")
-                @Html.DisplayFor(model => model.telefones[0].ddd)
-                @Html.DisplayName(")")
+        @if(!string.IsNullOrEmpty(Model.telefones[0].numero)) {
+            <dd>                
                 @Html.DisplayFor(model => model.telefones[0].numero)
             </dd>
         }
@@ -67,26 +67,20 @@
             </dd>
         }
         
-        @if (Model.telefones[1].ddd != null && Model.telefones[1].numero != null)
+        @if (!string.IsNullOrEmpty(Model.telefones[1].numero))
         {
             <dt>                
             </dt>
-            <dd>
-                @Html.DisplayName("(")
-                @Html.DisplayFor(model => model.telefones[1].ddd)
-                @Html.DisplayName(")")
+            <dd>                
                 @Html.DisplayFor(model => model.telefones[1].numero)
             </dd>
         }        
 
-        @if (Model.telefones[2].ddd != null && Model.telefones[2].numero != null)
+        @if (!string.IsNullOrEmpty(Model.telefones[2].numero))
         {
             <dt>
             </dt>
-            <dd>
-                @Html.DisplayName("(")
-                @Html.DisplayFor(model => model.telefones[2].ddd)
-                @Html.DisplayName(")")
+            <dd>                
                 @Html.DisplayFor(model => model.telefones[2].numero)
             </dd>
         }
